--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ license = "MIT"
 repository = "https://github.com/sagebind/stability"
 documentation = "https://docs.rs/stability/"
 readme = "README.md"
-edition = "2018"
+edition = "2021"
+rust-version = "1.60"
 
 [dependencies]
 quote = "1"
